# OC-P10-TechNova

./: ESN_Part_1.ipynb  ESN_Part_1_version_2.ipynb  pyproject.toml
