[project]
name = "technova"
version = "0.1.0"
description = "Projet TechNova pour analyser les causes de démission"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff",
    "pandas",
    "matplotlib",
    "seaborn",
    "numpy",
    "scipy",
    "scikit-learn",
    "polars>=1.36.1",
    "xgboost>=3.1.2",
]

[dependency-groups]
dev = [
    "ipykernel",
    "uv",
]
