[project]
name = "technova"
version = "0.1.0"
description = "Projet TechNova pour analyser les causes de démission"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff",
    "pandas",
    "matplotlib",
    "seaborn",
    "numpy",
    "scipy",
    "polars>=1.36.1",
    "xgboost>=3.1.2",
    "jinja2>=3.1.6",
    "shap>=0.49.1",
    "pytest>=9.0.2",
    "imbalanced-learn>=0.14.0",
    "scikit-learn==1.4.2",
]

[dependency-groups]
dev = ["ipykernel", "uv"]
